Sort dialog appears well. No functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="apply">Apply</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="by_mood">by mood</string>
     <string-array name="numbers">
         <item>1</item>
         <item>2</item>
